--- a/shalinahussain/package.json
+++ b/shalinahussain/package.json
@@ -1,14 +1,14 @@
-{
-  "name": "shalinahussain",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
+
+  name shalinahussain
+  version 0.1.0
+  private true
+  scripts
+    dev next dev
+    build next build
+    start next start
+    lint lint
+  
+  "dependencies
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.7"
@@ -22,5 +22,5 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.7"
-  }
-}
+  
+
